--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build"
+    "build": "tsc && vite build",
+    "ts-watch": "tsc --watch"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0",
