--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,3 +32,5 @@ jobs:
           release/crx-poe-trade-filter-autofill-1.0.0.zip         
         draft: false
         prerelease: false
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
