--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            release/crx-poe-trade-filter-autofill-1.0.0.zip
+            release/crx-poe-trade-filter-autofill-${{ github.ref_name }}.zip
           draft: false
           prerelease: false
         env:
